--- a/src/scss/components/_contactUs.scss
+++ b/src/scss/components/_contactUs.scss
@@ -1,6 +1,6 @@
 .contactUs {
     background: #F2F2F2;
-    padding-bottom: 96px;
+    padding-bottom: 110px;
 
     &__title {
         margin-top: 52px;
@@ -9,15 +9,16 @@
 
     &__description {
         color: #666666;
-        margin-bottom: 28px;
+        margin-bottom: 52px;
     }
 
     &__input {
         margin-bottom: 28px;
+        font-size: 16px;
     }
 
     &__button {
-        margin-top: 44px;
+        margin-top: 16px;
         margin-bottom: 29px;
     }
 
