--- a/src/scss/components/_discounts.scss
+++ b/src/scss/components/_discounts.scss
@@ -3,8 +3,8 @@
     position: relative;
 
     &__container {
-        padding-bottom: 100px;
-        padding-top: 63px;
+        padding-bottom: 67px;
+        padding-top: 70px;
         padding-right: 0;
         // padding-bottom: 100px;
     }
@@ -22,7 +22,7 @@
         // display: none;
         width: 269px;
         padding-top: 26px;
-        padding-bottom: 26px;
+        padding-bottom: 35px;
         color: #FFFFFF;
         position: relative;
         padding-left: 26px;
@@ -42,14 +42,15 @@
             z-index: 10;
             font-size: 30px;
             max-width: 160px;
-            margin-bottom: 16px;
+            margin-bottom: 10px;
+            line-height: 107.8%;
         }
 
         &-description {
             z-index: 10;
             color: #E3E3E3;
             max-width: 225px;
-            margin-bottom: 26px;
+            margin-bottom: 19px;
         }
 
         &-bg {
@@ -64,10 +65,11 @@
         &-button {
             z-index: 10;
             width: auto;
-            padding: 16px 23px;
+            // padding: 16px 23px;
             line-height: 120.3%;
             /* or 17px */
             letter-spacing: 0.105em;
+            padding: 17px 23.5px;
         }
     }
 
