--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -29,6 +29,10 @@
             content: url('../img/expand-arrow.svg');
             margin-left: 6px;
         }
+
+        &-place {
+            line-height: 157%;
+        }
     }
 
     &__block {
