--- a/src/views/_includes/blocks/benefits.pug
+++ b/src/views/_includes/blocks/benefits.pug
@@ -5,7 +5,7 @@ section.benefits
         .swiper-slide.benefits__swiper-slide
           .benefits__card
             h3.benefits__card-title 100 салонов
-            p.benefits__card-description 70 салонов в России и&nbsp;30&nbsp;в&nbsp;Казахстане,  Украине и  Беларусь.
+            p.benefits__card-description 70 салонов в России и&nbsp;30&nbsp;в&nbsp;Казахстане,&nbsp;Украине и  Беларусь.
           .benefits__card
             h3.benefits__card-title Рассрочка 2 года
             p.benefits__card-description Удобная рассрочка оплаты на 2 года без процентов
