--- a/src/views/_includes/blocks/bonuses.pug
+++ b/src/views/_includes/blocks/bonuses.pug
@@ -31,3 +31,6 @@ section.bonuses
 
       .swiper-button-prev.bonuses__swiper-button-prev
       .swiper-button-next.bonuses__swiper-button-next
+
+    .button.bonuses__button.button--bordered Посмотреть все
+  
