--- a/src/views/_includes/blocks/contactUs.pug
+++ b/src/views/_includes/blocks/contactUs.pug
@@ -8,7 +8,7 @@ section.contactUs
 
   .container.contactUs__container
     h3.title.contactUs__title Приходите к нам, поговорим о вашем проекте
-    p.contactUs__description Новые модели, выгодные акции и неожиданные дизайнерские решения ежедневно в удобном для вас формате. Подписывайтесь!
+    p.contactUs__description Новые модели, выгодные акции и неожиданные дизайнерские решения ежедневно в удобном для&nbsp;вас формате. Подписывайтесь!
 
     form(action="#").mainForm.contactUs__mainForm
       .mainForm__input-group
