--- a/src/views/_includes/blocks/feedback.pug
+++ b/src/views/_includes/blocks/feedback.pug
@@ -13,7 +13,7 @@ section.feedback
               .feedback__user
                 img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                 span.feedback__user-name Андрей Иванов
-              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
         .swiper-slide.feedback__swiper-slide
@@ -39,7 +39,7 @@ section.feedback
               .feedback__user
                 img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                 span.feedback__user-name Андрей Иванов
-              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
 
@@ -54,7 +54,7 @@ section.feedback
         .swiper-slide.banner__swiper-slide
             .banner__card
               .banner__card-info
-                span.banner__card-rate 4.9
+                span.banner__card-rate 4,9
                 a(href="#").banner__card-logo
                   picture
                     source(media="(min-width: 768px)", srcset="assets/img/feedback/otzovik-md.svg", type="image/svg+xml")
@@ -63,7 +63,7 @@ section.feedback
               p.banner__card-quantity На основе 32 отзывов
             .banner__card
               .banner__card-info
-                span.banner__card-rate 4.9
+                span.banner__card-rate 4,9
                 a(href="#").banner__card-logo
                   picture
                     source(media="(min-width: 768px)", srcset="assets/img/feedback/zoon-md.svg", type="image/svg+xml")
@@ -72,7 +72,7 @@ section.feedback
               p.banner__card-quantity На основе 32 отзывов
             .banner__card
               .banner__card-info
-                span.banner__card-rate 4.9
+                span.banner__card-rate 4,9
                 a(href="#").banner__card-logo
                   picture
                     source(media="(min-width: 768px)", srcset="assets/img/feedback/recommend-md.svg", type="image/svg+xml")
