--- a/src/views/_includes/blocks/footer.pug
+++ b/src/views/_includes/blocks/footer.pug
@@ -40,7 +40,7 @@ section.list
     .list__card
       h4.list__card-title Контакты
       a.list__card-item(href='#') Адреса салонов
-      a.list__card-item(href='#') Офисы салонов
+      a.list__card-item(href='#') Офисы и склад
     .list__card
       .list__card-block
         a.list__card-title.list__card-title2(href='#') Калькулятор кухни
