--- a/src/views/_includes/blocks/hero.pug
+++ b/src/views/_includes/blocks/hero.pug
@@ -2,12 +2,12 @@ section.hero
   .container.hero__container
     .hero__wrap 
       h1.title.hero__title Создаем кухни, в&nbsp;которые вы влюбитесь
-      p.hero__description Производим кухни по российской-немецкой технологии. В каталоге более 300 моделей. А ещё, делаем бесплатный дизайн-проект конкретно для вас. 
+      p.hero__description Производим кухни по российской-немецкой технологии. В&nbsp;каталоге более 300 моделей. А ещё, делаем бесплатный дизайн-проект конкретно для вас. 
       form(action="#").mainForm.hero__mainForm
         .mainForm__input-group
           input(type="text", placeholder="Ваше имя").mainForm__input.hero__input
           input(type="phone", placeholder="Ваш телефон").mainForm__input.hero__input
-        button.mainForm__button.button.button--primary Получить дизайн-проект
+        button.mainForm__button.button.button--primary.hero__button Получить дизайн-проект
       .hero__info
         span.hero__info-text С 1999 года выполено заказов
         strong.hero__info-number 72 125
