--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -5,7 +5,7 @@ section.models
       .swiper-wrapper.models__swiper-wrapper
         .swiper-slide.models__swiper-slide
           span.models__filter.models__filter--active Кухни со скидкой
-          span.models__filter Прямие
+          span.models__filter Прямые
           span.models__filter С островом
           span.models__filter Белые
           span.models__filter Красные
@@ -16,7 +16,10 @@ section.models
   .container.models__container2
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
+          img(src="assets/img/models/1.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -25,7 +28,10 @@ section.models
     
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
+          img(src="assets/img/models/2.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -34,7 +40,10 @@ section.models
 
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
+          img(src="assets/img/models/3.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -43,7 +52,10 @@ section.models
 
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
+          img(src="assets/img/models/4.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -52,7 +64,10 @@ section.models
 
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
+          img(src="assets/img/models/5.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -61,7 +76,10 @@ section.models
 
     .card
       .card__img
-        img(src="assets/img/models/1.jpg")
+        picture
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
+          img(src="assets/img/models/1.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
