--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -150,7 +150,7 @@ strong {
     &__input {
         border-bottom: 1px solid #9D9D9D;
         padding-bottom: 27px;
-        padding-left: 20px;
+        padding-left: 16px;
         // width: 270px;
         width: 100%;
 
@@ -177,6 +177,8 @@ strong {
     letter-spacing: 0.07em;
     text-transform: uppercase;
     font-family: 'Averta', sans-serif;
+    z-index: 50;
+    cursor: pointer;
 
     &--primary {
         background-color: $color-red;
@@ -190,6 +192,12 @@ strong {
     &--dark {
         background-color: #292929;
 
+    }
+
+    &--bordered {
+        border: 1px solid #323232;
+        background-color: transparent;
+        color: #131313;
     }
 }
 
@@ -239,6 +247,7 @@ strong {
         }
 
         &-prev {
+            left: 0 !important;
             width: 54px !important;
             height: 54px !important;
             border-radius: 50%;
