--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -6,9 +6,9 @@
 @font-face {
     font-family: 'Averta';
     src: local('Averta Regular'), local('Averta-Regular'),
-        url('fonts/Averta/AvertaDemoPE-Regular.woff2') format('woff2'),
-        url('fonts/Averta/AvertaDemoPE-Regular.woff') format('woff'),
-        url('fonts/Averta/AvertaDemoPE-Regular.ttf') format('truetype');
+        url('fonts/Averta/font.woff2') format('woff2'),
+        url('fonts/Averta/font.woff') format('woff');
+    // url('fonts/Averta/AvertaDemoPE-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
