--- a/src/views/_includes/blocks/articles.pug
+++ b/src/views/_includes/blocks/articles.pug
@@ -59,5 +59,5 @@
     .swiper-button-prev.articles__swiper-button-prev
     .swiper-button-next.articles__swiper-button-next
 
-  .button.articles__button.button--light Посмотреть все
+  .button.articles__button.button--bordered Посмотреть все
 
