--- a/src/views/_includes/blocks/leader.pug
+++ b/src/views/_includes/blocks/leader.pug
@@ -3,13 +3,20 @@ section.leader
     .leader__info
       h2.title.leader__info-title Кухни на заказ в&nbsp;салонах Кухнисити
       .leader__info-img
-        img(src="assets/img/leader/leader-photo.jpg", alt="leader-photo")
+        picture 
+          source(media="(min-width:1280px)", srcset="assets/img/leader/leader-photo.webp", type="image/webp")
+          source(media="(min-width:1280px)", srcset="assets/img/leader/leader-photo.jpg", type="image/jpg")
+          source(media="(min-width:768px)", srcset="assets/img/leader/leader-photo-md .webp", type="image/webp")
+          source(media="(min-width:768px)", srcset="assets/img/leader/leader-photo-md.jpg", type="image/jpg")
+          source(media="(min-width:320px)", srcset="assets/img/leader/leader-photo-sm.webp", type="image/webp")
+          source(media="(min-width:320px)", srcset="assets/img/leader/leader-photo-sm.jpg", type="image/jpg")
+          img(src="assets/img/leader/leader-photo.jpg", alt="leader-photo")
       strong.leader__info-name Андрей Селиванов
       span.leader__info-job руководитель производства
       .leader__info-sign
     .leader__block
       .title.leader__title Кухни на заказ в&nbsp;салонах Кухнисити
-      .leader__text Кухня – одно из самых важных помещений в доме. Здесь готовят еду, устраивают семейные обеды, дружеские посиделки, а порой и званые вечера. Отсюда вытекают главные критерии выбора мебели – материалы и фурнитура (от покрытия столешницы и заканчивая ручками на фасадах) должны быть готовы к интенсивным нагрузкам,  а продуманная планировка должна помогать выполнять бытовые дела с легкостью, комфортом и удовольствием. А еще хочется, чтобы было красиво!
+      .leader__text Кухня – одно из самых важных помещений в доме. Здесь готовят еду, устраивают семейные обеды, дружеские посиделки, а&nbsp;порой и званые вечера. Отсюда вытекают главные критерии выбора мебели – материалы и фурнитура (от покрытия столешницы и заканчивая ручками на фасадах) должны быть готовы к интенсивным нагрузкам,  а продуманная планировка должна помогать выполнять бытовые дела с легкостью, комфортом и удовольствием. А еще хочется, чтобы было красиво!
       .leader__text.leader__text-expand  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, obcaecati pariatur. Unde quas aspernatur sit, placeat repellendus iusto vitae excepturi.                    
       .leader__button раскрыть
     
