--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -982,6 +982,7 @@
             padding-left: 52px;
             position: relative;
             padding-top: 40px;
+            align-items: flex-start;
 
             &-title {
                 font-size: 40px;
